Added a new o nas page

--- a/styles/_header.module.scss
+++ b/styles/_header.module.scss
@@ -43,6 +43,10 @@
 		background-image: url('../public/dlaczego-nasza-szkola/background-dlaczego-nasza-szkola.jpg');
 	}
 
+	&--o-nas {
+		background-image: url('../public/index/background-index.png');
+	}
+
 	&--kalendarz {
 		background-image: url('../public/kalendarz/background-kalendarz.png');
 	}
