Added nasza kadra page

--- a/styles/_header.module.scss
+++ b/styles/_header.module.scss
@@ -67,6 +67,10 @@
 		background-image: url('../public/program-nauczania/background-program-nauczania.jpg');
 	}
 
+	&--nasza-kadra {
+		background-image: url('../public/partnerzy-szkoly/background-partnerzy-szkoly.jpg');
+	}
+
 	&--szkolne-projekty {
 		background-image: url('../public/szkolne-projekty/background-szkolne-projekty.jpg');
 	}
