Added dekalog ucznia page

--- a/styles/_header.module.scss
+++ b/styles/_header.module.scss
@@ -83,6 +83,10 @@
 		background-image: url('../public/kodeks/background-kodeks.jpg');
 	}
 
+	&--dekalog-ucznia {
+		background-image: url('../public/bezpieczenstwo-dzieci/background-bezpieczenstwo-dzieci.jpg');
+	}
+
 	&--podreczniki {
 		background-image: url('../public/podreczniki/background-podreczniki.jpg');
 	}
