--- a/styles/_header.module.scss
+++ b/styles/_header.module.scss
@@ -39,6 +39,10 @@
 		background-image: url('../public/index/background-index.png');
 	}
 
+	&--aktualnosci {
+		background-image: url('../public/podreczniki/background-podreczniki.jpg');
+	}
+
 	&--dlaczego-nasza-szkola {
 		background-image: url('../public/dlaczego-nasza-szkola/background-dlaczego-nasza-szkola.jpg');
 	}
