--- a/styles/_nav.module.scss
+++ b/styles/_nav.module.scss
@@ -241,7 +241,7 @@ input[type=checkbox] {
 
 		// WHEN CHECKBOX IS CHECKED, THEN SHOW SUBNAV 
 		&:checked+ul {
-			min-height: 10rem;
+			min-height: 30vh;
 
 			overflow-y: scroll;
 			opacity: 1;
