Added pages and some functionality for admin panel

--- a/styles/_wrapper.module.scss
+++ b/styles/_wrapper.module.scss
@@ -129,6 +129,11 @@
 
 	background: $background-secondary;
 
+	&--login {
+		flex-direction: column;
+		min-width: 100%;
+	}
+
 	// TABLET STYLE
 	@media screen and (max-width: $tablet-screen) {
 		width: 100%;
