Cleaning up code and fixing some issues

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,7 @@
 $color-primary: rgb(50, 50, 50);
 $color-secondary: rgb(240, 240, 240);
 $color-highlight: rgb(0, 124, 182);
+$color-danger: rgb(220, 20, 60);
 
 $background-primary: rgb(240, 240, 240);
 $background-secondary: rgb(0, 124, 182);
