--- a/styles/_misc.module.scss
+++ b/styles/_misc.module.scss
@@ -221,12 +221,12 @@
 
 .loader-container {
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 10;
+	z-index: 9;
 
 	background: rgba($color-primary, 0.5);
 
