--- a/styles/_wrapper.module.scss
+++ b/styles/_wrapper.module.scss
@@ -175,6 +175,14 @@
 	}
 }
 
+.no-posts {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 20vh;
+}
+
 .aktualnosci-item-wrapper {
 	padding: $space-xm $space-xs;
 
@@ -186,3 +194,4 @@
 		padding: $space-m 0;
 	}
 }
+
