--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,6 +5,7 @@ $color-danger: rgb(220, 20, 60);
 
 $background-primary: rgb(240, 240, 240);
 $background-secondary: rgb(0, 124, 182);
+$background-item: rgb(230, 230, 230);
 
 $space-xs: 10px;
 $space-s: 1rem;
