--- a/styles/_misc.module.scss
+++ b/styles/_misc.module.scss
@@ -277,11 +277,11 @@
 .aktualnosci {
 	&--date {
 		min-width: fit-content;
-		margin-left: $space-m;
+		// margin-left: $space-m;
 
 		@media screen and (max-width: $tablet-screen) {
 			margin-left: 0;
-
+			width: fit-content
 		}
 	}
 
